--- a/scratch-renderer/scratch-renderer.vcxproj
+++ b/scratch-renderer/scratch-renderer.vcxproj
@@ -21,14 +21,14 @@
   <ItemGroup>
     <ClCompile Include="src\PixelBuffer.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
-    <ClCompile Include="src\ApplicationSDL2.cpp" />
+    <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Logging.cpp" />
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Pixel.h" />
     <ClInclude Include="src\Renderer.h" />
-    <ClInclude Include="src\ApplicationSDL2.h" />
+    <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\FactoryContainer.h" />
     <ClInclude Include="src\Logging.h" />
     <ClInclude Include="src\PixelBuffer.h" />
